# ai-everything-push

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  form_utils.py  logging.py  schema_upgrade.py  templating.py
app/db/: base.py
app/schemas/: __init__.py  feishu.py  model_config.py  source.py  source_rule.py  system_setting.py
app/services/: __init__.py  article_ingest_service.py  article_processing_service.py  article_service.py  crawl_service.py  dashboard_service.py  database_admin_service.py  job_service.py  model_config_service.py  report_service.py  source_health_service.py  source_rule_preview_service.py  source_rule_service.py  source_rule_template_service.py  source_service.py  starter_preset_service.py  system_setting_service.py
app/static/: styles.css
app/templates/: base.html  dashboard.html
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: articles.py  dashboard.py  digests.py  health.py  sources.py
backend/app/core/: config.py  database.py  scheduler.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: article.py  dashboard.py  digest.py  source.py
backend/app/services/: analysis.py  digest.py  feishu.py  ingestion.py  jobs.py  language.py  parsers.py  translation.py
backend/forum_digest_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_digest_service.py  test_language_service.py  test_parser_helpers.py
docs/plans/: 2026-04-17-admin-vue-migration.md  2026-04-17-feishu-template-design.md  2026-04-17-feishu-template.md  2026-04-17-job-guard-readme-design.md  2026-04-17-job-guard-readme.md  (+8 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_health.py
(+106 files in other folders)
